# Agent_Bora

./: AGENTS.md  CLAUDE.md  DATABASE_SETUP.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  insforge.toml  skills-lock.json
Prototype/: .thumbnail  Agent Bora.html  actions.jsx  agents.jsx  app.jsx  auth.jsx  brandlogos.jsx  data.jsx  home.jsx  integrations.jsx  landing.jsx  landing_v1.jsx  meetings.jsx  newmeeting.jsx  ui.jsx
backend/: .env.local  README.md  main.py  pyproject.toml  seed.py  seed_simple.py
frontend/: .env.local.example  README.md  next.config.js  package-lock.json  package.json
frontend/components/: AuthLayout.js  BrandLogos.js  DashboardShell.js  ui.js
frontend/components/workspace/: Actions.js  Agents.js  Home.js  Integrations.js  Meetings.js  NewMeeting.js  PageWrap.js  Sidebar.js  Workspace.js
frontend/context/: AuthContext.js  DemoStore.js
frontend/lib/: demo-data.js
frontend/lib/insforge/: auth-cookies.js  client.js  pages-api.js  server.js
frontend/pages/: _document.js  app.js  dashboard.js  forgot-password.js  index.js  login.js  reset-password.js  signup.js
frontend/pages/api/auth/: callback.js  forgot-password.js  oauth.js  refresh.js  resend-verification.js  reset-password.js  sign-in.js  sign-out.js  sign-up.js  user.js  verify-email.js
frontend/styles/: globals.css
frotend/: package-lock.json
frotend/pages/: dashboard.js
frotend/styles/: globals.css
