[project]
name = "agent-bora-backend"
version = "0.1.0"
description = "FastAPI backend for Agent Bora prototype"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "pydantic",
  "uvicorn[standard]",
  "python-dotenv",
  "httpx",
  "insforge",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
